Tue, Jan 20, 2008
---------------------------------------------------------------------
- Refactored Setting.opportunity_stage to make sure the insertion order is preserved.
- Welcome, Mr. President.

Mon, Jan 19, 2008
---------------------------------------------------------------------
- Improved login/logout flash messages.
- Refactored list templates to use collection partials.
- Added sidebar for Campaigns to filter them out by status.

Sun, Jan 18, 2008
---------------------------------------------------------------------
- More fine tuning of plugins and callback hooks.
- Sample plugin now implements view, controller, and controller filter hooks.

Sat, Jan 17, 2009
---------------------------------------------------------------------
- Implemented FatFreeCRM::Plugin and FatFreeCRM::Callback modules.
- Created first sample Fat Free CRM plugin!
- Uninstalled Searchlogic plugin and added Rails Engines.
- Fixed :my scope to use LEFT OUTER JOINs with permissions.

Fri, Jan 16, 2009
---------------------------------------------------------------------
- Experimenting with application plugins.

Thu, Jan 15, 2009
---------------------------------------------------------------------
- Exploring infrastructure for application plugins.

Wed, Jan 14, 2009
---------------------------------------------------------------------
- Added :my named scope for main models to support permissions.
- Refactored all controllers to use :my permission-based scopes.
- Refactored [Leads/Index] and [Leads/Filter] to use collection partial.
- Added missing database indices.

Tue, Jan 13, 2009
---------------------------------------------------------------------
- Added rendering of local sidebar template if it's available.
- Added sidebar for Leads and implemented initial version of leads filtering by status.

Mon, Jan 12, 2009
---------------------------------------------------------------------
- Replaced account template stubs with actual contact and opportunity numbers.