@@ -9,9 +9,10 @@ module LeadsHelper
     select_tag name, options_for_select, options
   end
 
+  # Sidebar checkbox control for filtering leads by status.
   #----------------------------------------------------------------------------
-  def status_checbox(status)
-    checked = (session[:filter_by_lead_status] ? session[:filter_by_lead_status].split(",").include?(status.to_s) : true)
+  def lead_status_checbox(status, count)
+    checked = (session[:filter_by_lead_status] ? session[:filter_by_lead_status].split(",").include?(status.to_s) : count > 0)
     check_box_tag("status[]", status, checked, :onclick => remote_function(:url => { :action => :filter }, :with => %Q/"status=" + $$("input[name='status[]']").findAll(function (el) { return el.checked }).pluck("value")/))
   end
 
