@@ -32,6 +32,7 @@ class Opportunity < ActiveRecord::Base
   has_many :contacts, :through => :contact_opportunities, :uniq => true
   has_many :permissions, :as => :asset, :include => :user
   named_scope :my, lambda { |user| { :include => :permissions, :conditions => ["opportunities.user_id=? OR opportunities.assigned_to=? OR permissions.user_id=?", user, user, user], :order => "opportunities.id DESC" } }
+  named_scope :only, lambda { |filters| { :conditions => [ "stage IN (?)" + (filters.delete("other") ? " OR stage IS NULL" : ""), filters ] } }
   uses_mysql_uuid
   acts_as_paranoid
 
