@@ -2,12 +2,12 @@
   .check_box{:style => "border-bottom: 1px silver dotted;"}
     %div{:style => "float:right;"}
       = @lead_status_total[value]
-    = status_checbox(value) << " " << key
+    = lead_status_checbox(value, @lead_status_total[value]) << " " << key
 
 .check_box{:style => "border-bottom: 1px silver dotted;"}
   %div{:style => "float:right;"}
     = @lead_status_total[:other]
-  = status_checbox("other") << " Other"
+  = lead_status_checbox("other", @lead_status_total[:other]) << " Other"
 
 .check_box{:style => "border-bottom: 1px silver dotted;"}
   %div{:style => "float:right;"}
