@@ -1,6 +1,7 @@
 Tue, Jan 20, 2008
 ---------------------------------------------------------------------
 - Refactored Setting.opportunity_stage to make sure the insertion order is preserved.
+- Implemented opportunities filtering by stage.
 - Welcome, Mr. President.
 
 Mon, Jan 19, 2008
